# EvoClaw

./: .gitignore  LICENSE  README.md  pyproject.toml  trial_config.example.yaml
docs/: _analysis_non_coding_compatibility.md  _failure_dubbo_jarscanner_cascade.md  _failure_dubbo_jarscanner_srs_fix_validation.md  advanced.md  running-trials.md  setup.md  usage.md
harness/e2e/: agent_runner.py  collect_results.py  config.py  container_setup.py  dag.py  e2e_config.yaml  evaluator.py  model_aliases.py  orchestrator.py  pricing.py  resume.py  run_e2e.py  run_milestone.py  smoke_test.py  test_masking.py
harness/e2e/agents/: __init__.py  base.py  claude_code.py  codex.py  gemini.py  openhands.py
harness/e2e/log_parser/: __init__.py  base.py  classify_behavior.py  claude_code.py  codex.py  gemini.py  models.py  openhands.py  verification.py
harness/e2e/prompt/: milestone_v1.md  v1.md  v1_recover.md  v2.md  v2_recover.md  (+1 more)
harness/prepare_repo/: __init__.py
harness/test_runner/: __init__.py  run_milestone_tests.py  single_state_runner.py
harness/utils/: cargo_report_utils.py  django_report_utils.py  go_report_utils.py  maven_report_utils.py  maven_surefire_xml_utils.py  pytest_report_utils.py  rust_test_filter.py  snapshot.py  src_filter.py  test_id_normalizer.py
scripts/: export_trial_csv.py  monitor.sh  pull_images.sh  push_images.sh  run_all.py
trial_configs/: claude-code_glm-5.1.yaml  claude-code_kimi-coding.yaml  claude-code_kimi-k2.6.yaml  claude-code_opus-4.6.yaml  claude-code_opus-4.7-1m.yaml  claude-code_opus-4.7.yaml  codex_gpt-5.4.yaml  codex_gpt-5.5.yaml
(+26 files in other folders)
